--- a/sass/bootstrap-select.scss
+++ b/sass/bootstrap-select.scss
@@ -38,6 +38,8 @@ select.selectpicker {
     position: relative;
     width: 100%;
     z-index: 1;
+    // necessary for proper positioning of caret in Bootstrap 4 (pushes caret to the right)
+    text-align: right;
 
     &.bs-placeholder,
     &.bs-placeholder:hover,
@@ -178,11 +180,10 @@ select.selectpicker {
 
   // The selectpicker button
   .dropdown-toggle {
-    // necessary for proper positioning of caret in bootstrap 4
+    // necessary to maintain proper button height with Bootstrap 3
     &:before {
       content: '';
       display: inline-block;
-      width: 100%;
     }
 
     .filter-option {
@@ -296,10 +297,6 @@ select.selectpicker {
   }
 
   &.fit-width .dropdown-toggle {
-    &:before {
-      display: none;
-    }
-
     .filter-option {
       &:after {
         content: ' ';
